fix a bug when opened on firefox on opensuse

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,7 +67,7 @@ header h2 {
   color: #666;
 }
 header .datearea {
-    padding-left:140px;
+    padding-left:120px;
 }
 
 #downloads .btn {
